--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "node-cron": "^3.0.1",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "uuidv4": "^6.2.13"
   },
@@ -26,6 +27,7 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^17.0.40",
     "@types/node-cron": "^3.0.1",
+    "@types/nodemailer": "^6.4.4",
     "prisma": "^3.14.0",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
