--- a/package.json
+++ b/package.json
@@ -5,27 +5,34 @@
   "license": "MIT",
   "scripts": {
     "typeorm": "tsnd node_modules/typeorm/cli.js",
-    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
+    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "3.14.0",
+    "@swc/core": "^1.2.197",
+    "@swc/jest": "^0.2.21",
+    "@types/jest": "^28.1.1",
+    "@types/supertest": "^2.0.12",
     "axios": "^0.27.2",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jest": "^28.1.1",
     "joi": "^17.6.0",
     "node-cron": "^3.0.1",
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
+    "supertest": "^6.2.3",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
-    "@types/node": "^17.0.40",
+    "@types/node": "^17.0.41",
     "@types/node-cron": "^3.0.1",
     "@types/nodemailer": "^6.4.4",
     "prisma": "^3.14.0",
