--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "supertest": "^6.2.3",
+    "swagger-ui-express": "^4.4.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/node": "^17.0.41",
     "@types/node-cron": "^3.0.1",
     "@types/nodemailer": "^6.4.4",
+    "@types/swagger-ui-express": "^4.1.3",
     "prisma": "^3.14.0",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
