--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "lib": ["esnext"],
     "esModuleInterop": true,
     "strict": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*.ts", "src/scripts/cronArticlests"]
 }
